--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-playground",
+  "name": "next-js-playground",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -24,6 +24,7 @@
     "swr": "^2.1.2",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
-    "yup": "^1.0.2"
+    "yup": "^1.0.2",
+    "headless": "0.0.1"
   }
 }
