--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "swr": "^2.1.2",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
-    "yup": "^1.0.2",
-    "headless": "0.0.1"
+    "yup": "^1.0.2"
   }
 }
