--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.15.11",
+    "@prisma/client": "^5.3.1",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
@@ -24,7 +24,15 @@
     "react-dom": "18.2.0",
     "swr": "^2.1.2",
     "tailwindcss": "3.3.1",
-    "typescript": "5.0.4",
     "yup": "^1.0.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.8.0",
+    "prisma": "^5.3.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
